--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,12 @@ environment:
   sdk: '>=3.3.1 <4.0.0'
 
 dependencies:
+  dio: ^5.4.1
   flutter:
     sdk: flutter
-  google_fonts: ^6.1.0
+  flutter_bloc: ^8.1.5
   gap: ^3.0.1
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
